--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
@@ -398,7 +398,7 @@
                       </div>
                     </template>
                     <!-- Value options list name -->
-                    <template x-if="isInFormSelectableValues">
+                    <template x-if="field && isInFormSelectableValues && field.type_field != 'unlinked'">
                       <div class="col-3">
                         <label for="modalField_ValueOptionsDesc" class="form-label" x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE_OPTIONS_LIST')"></label>
                         <!-- Value options configuration Check -->
@@ -436,7 +436,7 @@
                       </div>
                     </template>
                     <!-- Value options edition -->
-                    <template x-if="configValueOptions && field">
+                    <template x-if="field && configValueOptions">
                       <div class="row">
                         <!-- Value options configuration Table -->
                         <div class="col-12" x-data="WizardStep2.sortableListxData(field.value_options)">
@@ -445,8 +445,12 @@
                             <thead>
                               <tr>
                                 <th x-text="utils.translate('LBL_FIELD_VALUE_OPTION_NAME')"></th>
-                                <th x-text="utils.translate('LBL_FIELD_VALUE_OPTION_ORIGINAL_LABEL')"></th>
-                                <th x-text="utils.translate('LBL_FIELD_VALUE_OPTION_SHOW')"></th>
+                                <template x-if="field.type_field != 'unlinked'">
+                                  <th x-text="utils.translate('LBL_FIELD_VALUE_OPTION_ORIGINAL_LABEL')"></th>
+                                </template>
+                                <template x-if="field.type_field != 'unlinked'">
+                                  <th x-text="utils.translate('LBL_FIELD_VALUE_OPTION_SHOW')"></th>
+                                </template>
                                 <th x-text="utils.translate('LBL_FIELD_VALUE_OPTION_LABEL')"></th>
                                 <th x-text="utils.translate('LBL_ACTIONS')"></th>
                               </tr>
@@ -454,30 +458,56 @@
                             <tbody>
                               <template x-for="(element, index) in field.value_options">
                                 <tr>
-                                  <td x-text="element.value"></td>
-                                  <td x-text="element.text_original"></td>
-                                  <td>
-                                    <div class="form-switch">
-                                      <input class="form-check-input form-switch" type="checkbox" role="switch" x-model="element.is_visible" :id="`modalField_ValueOptionsInclude${index}`"/>
-                                    </div>
-                                  </td>
+                                  <!-- Value -->
+                                  <template x-if="field.type_field != 'unlinked'">
+                                    <td x-text="element.value"></td>
+                                  </template>
+                                  <template x-if="field.type_field == 'unlinked'">
+                                    <td>
+                                      <input class="form-control" type="text" x-model="element.value" :id="`modalField_ValueOptionsValue${index}`"/>
+                                    </td>
+                                  </template>
+                                  <!-- Text original -->
+                                  <template x-if="field.type_field != 'unlinked'">
+                                    <td x-text="element.text_original"></td>
+                                  </template>
+                                  <!-- Is Visible -->
+                                  <template x-if="field.type_field != 'unlinked'">
+                                    <td>
+                                      <div class="form-switch">
+                                        <input class="form-check-input form-switch" type="checkbox" role="switch" x-model="element.is_visible" :id="`modalField_ValueOptionsInclude${index}`"/>
+                                      </div>
+                                    </td>
+                                  </template>
+                                  <!-- Text -->
                                   <td>
                                     <input class="form-control" type="text" x-model="element.text" :id="`modalField_ValueOptionsText${index}`"/>
                                   </td>
-                                  <td>
+                                  <!-- Buttons -->
+                                  <td class="d-flex">
                                     <div class="input-group">
-                                      <button type="button" class="btn" :disabled="index === 0" @click="moveUp(index)">
+                                      <button type="button" class="btn" :disabled="index === 0" @click="moveUp(index)" :title="utils.translate('LBL_ACTION_MOVE_UP')">
                                         <span class="suitepicon suitepicon-action-move-up"></span>
                                       </button>
-                                      <button type="button" class="btn" :disabled="index === field.value_options.length - 1" @click="moveDown(index)">
+                                      <button type="button" class="btn" :disabled="index === field.value_options.length - 1" @click="moveDown(index)" :title="utils.translate('LBL_ACTION_MOVE_DOWN')">
                                         <span class="suitepicon suitepicon-action-move-down"></span>
                                       </button>
                                     </div>
+                                    <template x-if="field.type_field == 'unlinked'">
+                                      <button type="button" class="btn ms-2" @click="field.value_options.splice(index, 1)" :title="utils.translate('LBL_ACTION_DELETE')">
+                                        <span class="suitepicon suitepicon-action-delete"></span>
+                                      </button>
+                                    </template>
                                   </td>
                                 </tr>
                               </template>
                             </tbody>
                           </table>
+                          <template x-if="field.type_field == 'unlinked'">
+                            <button type="button" class="btn" @click="field.value_options.push(new AWF_ValueOption());" :title="utils.translate('LBL_ACTION_ADD')">
+                              <span class="suitepicon suitepicon-action-plus"></span>
+                            </button>
+                          </template>
                         </div>
                       </div>
                     </template>
@@ -554,7 +584,8 @@
                       <template x-if="field.acceptPlaceholder()">
                         <div class="col-3">
                           <label for="modalField_Placeholder" class="form-label" x-text="utils.translateForFieldLabel('LBL_FIELD_PLACEHOLDER')"></label>
-                          <input id="modalField_Placeholder" type="text" class="form-control" x-model="field.placeholder" />
+                          <input id="modalField_Placeholder" :placeholder="utils.translate('LBL_FIELD_PLACEHOLDER')" class="form-control" 
+                                 x-model="field.placeholder" />
                         </div>
                       </template>
                     </div>
