--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
@@ -38,7 +38,7 @@
     </div>
   </div>
   <!-- Data Blocks -->
-  <div class="flex-fill border rounded p-2 overflow-auto" x-data="WizardStep2.generalDatablocksxData(formConfig);" @keydown.escape.window="$store.fieldEditor.close();">
+  <div class="flex-fill border rounded p-2 overflow-auto" x-data="WizardStep2.generalDatablocksxData(formConfig);">
     <h2 class="mb-2" x-text="utils.translate('LBL_DATABLOCKS')"></h2>
     <!-- Main Content -->
 
@@ -603,17 +603,6 @@
                 </div>
               </template>
             </form>
-
-            <!-- Debug: Field Details-->
-            <div x-data="{ showFieldDetails: false}">
-              <div class="text-muted form-check form-switch mb-3 mt-5" id="showDetailsDataToggleSwitch" data-model="showFieldDetails" 
-                   data-label-text="[Mostrar Detalles]" x-init="sticControls.fieldCheckbox($el);"></div>
-              <div class="card p-2" x-show="showFieldDetails">
-                <div id="detailsDataBlockField">
-                  <div class="mt-3" id="fieldTable" data-model="field" x-init="sticControls.elemTableObject($el);"></div>
-                </div>
-              </div>
-            </div>
           </div>
 
           <!-- Accept / Cancel Buttons -->
